--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,27 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
-  <package id="CS-Script.bin" version="3.28.4.0" targetFramework="net462" />
+  <package id="CS-Script.bin" version="3.28.7" targetFramework="net462" />
   <package id="Dapper" version="1.50.5" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.8.2" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.2" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.8.2" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.8.2" targetFramework="net462" />
+  <package id="linq2db" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.2" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.9.0" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.1.4" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.4" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.4" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.4" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.4" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.2" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net462" />
@@ -32,7 +32,7 @@
   <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
@@ -41,12 +41,12 @@
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
   <package id="RepoDb" version="1.6.4" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.3-hotfix-20180129" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.1.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.1.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.1.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="5.1.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.1.0" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.0-Beta-20181019" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.4.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
@@ -59,7 +59,7 @@
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
@@ -77,7 +77,7 @@
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net462" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
@@ -88,7 +88,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
@@ -99,7 +99,7 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
-  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
@@ -118,7 +118,7 @@
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="Tortuga.Anchor" version="1.2.6283.989" targetFramework="net462" />
-  <package id="Tortuga.Chain.CompiledMaterializers" version="1.1.6311.38009" targetFramework="net462" />
-  <package id="Tortuga.Chain.Core" version="1.2.6563.39715" targetFramework="net462" />
-  <package id="Tortuga.Chain.SqlServer" version="1.2.6553.39547" targetFramework="net462" />
+  <package id="Tortuga.Chain.CompiledMaterializers" version="1.3.6848.4570" targetFramework="net462" />
+  <package id="Tortuga.Chain.Core" version="1.3.6847.41792" targetFramework="net462" />
+  <package id="Tortuga.Chain.SqlServer" version="1.3.6848.1549" targetFramework="net462" />
 </packages>
